--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest black
+        python -m pip install flake8 pytest black pytest-asyncio build
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Check format with black
       run: |
@@ -37,6 +37,29 @@ jobs:
       run: |
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --show-source --statistics
+    - name: Build packages
+      run: |
+        mkdir -p dist
+        for dir in libraries/*; do
+          if [ -d "$dir" ]; then
+            for subdir in "$dir"/*; do
+              if [ -f "$subdir/pyproject.toml" ]; then
+                (cd "$subdir" && python -m build --outdir ../../../dist)
+              fi
+            done
+          fi
+        done
+    - name: Install wheels
+      run: |
+        python -m pip install ./dist/microsoft_agents_core*.whl
+        python -m pip install ./dist/microsoft_agents_authentication*.whl
+        python -m pip install ./dist/microsoft_agents_connector*.whl
+        python -m pip install ./dist/microsoft_agents_client*.whl
+        python -m pip install ./dist/microsoft_agents_botbuilder*.whl
+        python -m pip install ./dist/microsoft_agents_authorization_msal*.whl
+        python -m pip install ./dist/microsoft_agents_copilotstudio_client*.whl
+        python -m pip install ./dist/microsoft_agents_hosting_aiohttp*.whl
+        python -m pip install ./dist/microsoft_agents_storage*.whl
     - name: Test with pytest
       run: |
         pytest
