--- a/libraries/Client/microsoft-agents-client/pyproject.toml
+++ b/libraries/Client/microsoft-agents-client/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 ]
 dependencies = [
     "microsoft-agents-core",
-    "microsoft-agents-authentication"
+    "microsoft-agents-authorization",
 ]
 
 [project.urls]
