Adding blob-backed storage

--- a/libraries/Storage/microsoft-agents-blob/pyproject.toml
+++ b/libraries/Storage/microsoft-agents-blob/pyproject.toml
@@ -14,6 +14,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "microsoft.agents.storage",
+    "azure-core",
+    "azure-storage-blob",
 ]
 
 [project.urls]
