--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -64,6 +64,7 @@ jobs:
         python -m pip install ./dist/microsoft_agents_hosting_aiohttp*.whl
         python -m pip install ./dist/microsoft_agents_storage*.whl
         python -m pip install ./dist/microsoft_agents_blob*.whl
+        python -m pip install ./dist/microsoft_agents_cosmos*.whl
     - name: Test with pytest
       run: |
         pytest
