--- a/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
+++ b/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "microsoft-agents-core",
+    "microsoft-agents-hosting-core",
 ]
 
 [project.urls]
