--- a/libraries/microsoft-agents-hosting-core/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-core/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "microsoft-agents-hosting"
+name = "microsoft-agents-hosting-core"
 version = "0.0.0a1"
 description = "A protocol library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
@@ -17,7 +17,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "isodate>=0.6.1",
     "azure-core>=1.30.0",
-    "microsoft-agents-core",
+    "microsoft-agents-activity",
     "python-dotenv>=1.1.1",
 ]
 
