--- a/libraries/microsoft-agents-storage-blob/pyproject.toml
+++ b/libraries/microsoft-agents-storage-blob/pyproject.toml
@@ -20,4 +20,4 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/microsoft/microsoft-agents-protocol"
+"Homepage" = "https://github.com/microsoft/Agents"
