--- a/libraries/microsoft-agents-activity/pyproject.toml
+++ b/libraries/microsoft-agents-activity/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "microsoft-agents-activity"
 version = "0.0.0a1"
-description = "A protocol library for Microsoft Agents"
+description = "Activity schema library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
 classifiers = [
@@ -18,4 +18,4 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/microsoft/microsoft-agents-protocol"
+"Homepage" = "https://github.com/microsoft/Agents"
