Adding Cosmos DB support for storage (#68)
* Adding Cosmos DB storage

* Removed unnecessary file

* Added quick storage testing functionality for debugging and improved documentation

* Simplified storage test setup and added unit test

* Fixed legacy container support and added relevant tests

* Revised AsyncStorageBase export/imports

* Fixed final unit tests and refined documentation

* Added microsoft-agent-cosmos to CI files

* Minor fixes to storage tests

* Moved files around

* Fixed imports and formatted with black

* Made key operation tests more data driven

* Fixed minor issues in unit tests

--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -51,6 +51,7 @@ steps:
     python -m pip install ./dist/microsoft_agents_hosting_aiohttp*.whl
     python -m pip install ./dist/microsoft_agents_hosting_teams*.whl
     python -m pip install ./dist/microsoft_agents_storage_blob*.whl
+    python -m pip install ./dist/microsoft_agents_storage_cosmos*.whl
   displayName: 'Install wheels'
 
 - script: |
