--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,6 +57,7 @@ jobs:
         python -m pip install ./dist/microsoft_agents_hosting_aiohttp*.whl
         python -m pip install ./dist/microsoft_agents_hosting_teams*.whl
         python -m pip install ./dist/microsoft_agents_storage_blob*.whl
+        python -m pip install ./dist/microsoft_agents_storage_cosmos*.whl
     - name: Test with pytest
       run: |
         pytest
