--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -22,7 +22,7 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    python -m pip install flake8 pytest black pytest-asyncio build
+    python -m pip install flake8 pytest black pytest-asyncio build setuptools-git-versioning
     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   displayName: 'Install dependencies'
 
