--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest black pytest-asyncio build
+        python -m pip install flake8 pytest black pytest-asyncio build setuptools-git-versioning
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Check format with black
       run: |
