--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -37,6 +37,7 @@ steps:
 - script: |
     PACKAGE_VERSION=$(pwsh -File replace-version.ps1)
     echo "##vso[task.setvariable variable=PackageVersion]$PACKAGE_VERSION"
+    echo "Package version set to: $PACKAGE_VERSION"
   displayName: 'Set package version'
 
 - script: |
