--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -38,16 +38,13 @@ steps:
     PACKAGE_VERSION=$(pwsh -File replace-version.ps1)
     echo "##vso[task.setvariable variable=PackageVersion]$PACKAGE_VERSION"
     echo "Package version set to: $PACKAGE_VERSION"
-  displayName: 'Set package version'
-
-- script: |
     mkdir -p dist
     for dir in libraries/*; do
       if [ -f "$dir/pyproject.toml" ]; then
         (cd "$dir" && python -m build --outdir ../../dist)
       fi
     done
-  displayName: 'Build packages'
+  displayName: 'Set Version and Build packages'
 
 - script: |
     python -m pip install ./dist/microsoft_agents_activity*.whl
