ADO pipeline wip

--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -48,7 +48,7 @@ steps:
       fi
     done
   env:
-    PackageVersion: $[ dependencies.PackageVersion ]
+    PackageVersion: $(PackageVersion)
   displayName: 'Set Version and Build packages'
 
 - script: |
