--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -14,6 +14,10 @@ strategy:
     Python_3.11:
       PYTHON_VERSION: '3.11'
 
+variables:
+  - name: PackageVersion
+    value: ''
+
 steps:
 - task: UsePythonVersion@0
   inputs:
@@ -38,7 +42,6 @@ steps:
     PACKAGE_VERSION=$(pwsh -File replace-version.ps1)
     echo "Package version set to: $PACKAGE_VERSION"
     echo "##vso[task.setvariable variable=PackageVersion;isOutput=true]$PACKAGE_VERSION"
-  shell: bash
   displayName: 'Set package version'
 
 - script: |
