--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -41,7 +41,7 @@ steps:
 - script: |
     PACKAGE_VERSION=$(pwsh -File replace-version.ps1)
     echo "Package version set to: $PACKAGE_VERSION"
-    echo "##vso[task.setvariable variable=PackageVersion;isOutput=true]$PACKAGE_VERSION"
+    echo "##vso[task.setvariable variable=PackageVersion]$PACKAGE_VERSION"
   displayName: 'Set package version'
 
 - script: |
