--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -40,9 +40,10 @@ steps:
 
 - script: |
     PACKAGE_VERSION=$(pwsh -File replace-version.ps1)
-    echo "Package version set to: $PACKAGE_VERSION"
     echo "##vso[task.setvariable variable=PackageVersion]$PACKAGE_VERSION"
+    echo "Package version set to: $PACKAGE_VERSION"
   displayName: 'Set package version'
+  condition: eq(variables['PackageVersion'], '')
 
 - script: |
     mkdir -p dist
