--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,9 +41,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --show-source --statistics
     - name: Set package version
-      shell: pwsh
       run: |
-        $version = & ./replace-version.ps1
+        cd ./versioning
+        $version = & { setuptools-git-versioning }
         echo "PackageVersion=$version" >> $env:GITHUB_ENV
         Write-Host "Package version set to: $version"
     - name: Build packages
