--- a/libraries/microsoft-agents-authentication-msal/pyproject.toml
+++ b/libraries/microsoft-agents-authentication-msal/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "microsoft-agents-authentication-msal"
-version = "0.0.0a1"
+dynamic = ["version", "dependencies"]
 description = "A msal-based authentication library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
@@ -12,12 +12,6 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-]
-dependencies = [
-    "microsoft-agents-hosting-core",
-    "msal>=1.31.1",
-    "requests>=2.32.3",
-    "cryptography>=44.0.0",
 ]
 
 [project.urls]
