--- a/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "microsoft-agents-hosting-aiohttp"
-version = "0.0.0a1"
+dynamic = ["version", "dependencies"]
 description = "Integration library for Microsoft Agents with aiohttp"
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
@@ -12,10 +12,6 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-]
-dependencies = [
-    "microsoft-agents-hosting-core",
-    "aiohttp>=3.11.11",
 ]
 
 [project.urls]
