Teams sample updates

--- a/test_samples/teams_agent/env.TEMPLATE
+++ b/test_samples/teams_agent/env.TEMPLATE
@@ -1,7 +1,7 @@
 # Rename to .env
-TENANT_ID=
-CLIENT_ID=
-CLIENT_SECRET=
+CONNECTIONS__SERVICE_CONNECTION__SETTINGS__CLIENTID=client-id
+CONNECTIONS__SERVICE_CONNECTION__SETTINGS__CLIENTSECRET=client-secret
+CONNECTIONS__SERVICE_CONNECTION__SETTINGS__TENANTID=tenant-id
+ 
+AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__GRAPH__SETTINGS__AZUREBOTOAUTHCONNECTIONNAME=connection-name
 AGENT_TYPE=TeamsSso
-BASE_URL=
-CONNECTION_NAME=
