teams activities - kinda hacky though

--- a/test_samples/e2e_test/.envLocal
+++ b/test_samples/e2e_test/.envLocal
@@ -5,3 +5,6 @@ CONNECTIONS__SERVICE_CONNECTION__SETTINGS__TENANTID=
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_API_VERSION=
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
+AZURE_OPENAI_TEXT_DEPLOYMENT_NAME=
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=
