--- a/libraries/microsoft-agents-authentication-msal/pyproject.toml
+++ b/libraries/microsoft-agents-authentication-msal/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "microsoft-agents-authentication-msal"
 dynamic = ["version", "dependencies"]
-description = "A msal-based authentication library for Microsoft Agents"
+description = "A msal-based authentication library for Microsoft Agents. DEPRECATED: This library has been renamed to msagents-authentication-msal. This will be the last version published with the current name."
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
 classifiers = [
