--- a/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "microsoft-agents-hosting-aiohttp"
 dynamic = ["version", "dependencies"]
-description = "Integration library for Microsoft Agents with aiohttp"
+description = "Integration library for Microsoft Agents with aiohttp. DEPRECATED: This library has been renamed to msagents-hosting-aiohttp. This will be the last version published with the current name."
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
 classifiers = [
