--- a/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-aiohttp/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "microsoft-agents-hosting-aiohttp"
 dynamic = ["version", "dependencies"]
 description = "Integration library for Microsoft Agents with aiohttp"
+readme = {file = "readme.md", content-type = "text/markdown"}
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
 classifiers = [
