--- a/libraries/microsoft-agents-storage-cosmos/pyproject.toml
+++ b/libraries/microsoft-agents-storage-cosmos/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "microsoft-agents-storage-cosmos"
 dynamic = ["version", "dependencies"]
 description = "A Cosmos DB storage library for Microsoft Agents"
+readme = {file = "readme.md", content-type = "text/markdown"}
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.9"
 classifiers = [
