--- a/libraries/microsoft-agents-activity/pyproject.toml
+++ b/libraries/microsoft-agents-activity/pyproject.toml
@@ -7,7 +7,7 @@ name = "microsoft-agents-activity"
 dynamic = ["version"]
 description = "A protocol library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
