--- a/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
+++ b/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
@@ -7,7 +7,7 @@ name = "microsoft-agents-copilotstudio-client"
 dynamic = ["version", "dependencies"]
 description = "A client library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
