--- a/libraries/microsoft-agents-hosting-teams/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-teams/pyproject.toml
@@ -7,7 +7,7 @@ name = "microsoft-agents-hosting-teams"
 dynamic = ["version", "dependencies"]
 description = "Integration library for Microsoft Agents with Teams"
 authors = [{name = "Microsoft Corporation"}]
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
