--- a/libraries/microsoft-agents-storage-cosmos/pyproject.toml
+++ b/libraries/microsoft-agents-storage-cosmos/pyproject.toml
@@ -7,7 +7,7 @@ name = "microsoft-agents-storage-cosmos"
 dynamic = ["version", "dependencies"]
 description = "A Cosmos DB storage library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
