Confirmed invalid path resulted in a build warning. Adding in correct license file as python standards require.

--- a/libraries/microsoft-agents-activity/pyproject.toml
+++ b/libraries/microsoft-agents-activity/pyproject.toml
@@ -9,7 +9,7 @@ description = "A protocol library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
 license = "MIT"
 license-files = [
-    "asdfasdfasfdsafasdfLICENSE"]
+    "LICENSE"]
 
 requires-python = ">=3.9"
 classifiers = [
