--- a/libraries/microsoft-agents-activity/pyproject.toml
+++ b/libraries/microsoft-agents-activity/pyproject.toml
@@ -9,7 +9,8 @@ description = "A protocol library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
 license = "MIT"
 license-files = [
-    "LICENSE"]
+    "LICENSE"
+]
 
 requires-python = ">=3.9"
 classifiers = [
