--- a/libraries/microsoft-agents-activity/pyproject.toml
+++ b/libraries/microsoft-agents-activity/pyproject.toml
@@ -8,10 +8,7 @@ dynamic = ["version"]
 description = "A protocol library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
 license = "MIT"
-license-files = [
-    "LICENSE"
-]
-
+license-files = ["LICENSE"]
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
