--- a/libraries/microsoft-agents-hosting-teams/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-teams/pyproject.toml
@@ -8,6 +8,7 @@ dynamic = ["version", "dependencies"]
 description = "Integration library for Microsoft Agents with Teams"
 authors = [{name = "Microsoft Corporation"}]
 license = "MIT"
+license-files = ["LICENSE"]
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
