Add license information to pyproject.toml files for multiple libraries (#161)
* Add license information to pyproject.toml files for multiple libraries

* Revising to use explicit license using SPDX format.

* testing to see what an invalid path license file does

* Confirmed invalid path resulted in a build warning. Adding in correct license file as python standards require.

* formatting

* search in root of repo for the license file.

* Fix license file path in pyproject.toml to comply with project structure

* Alright, let's do this the hard way

* Add in License file per package, and import the license file via the license-file directive. This eliminates all the build warnings.

--- a/libraries/microsoft-agents-hosting-core/pyproject.toml
+++ b/libraries/microsoft-agents-hosting-core/pyproject.toml
@@ -7,10 +7,11 @@ name = "microsoft-agents-hosting-core"
 dynamic = ["version", "dependencies"]
 description = "Core library for Microsoft Agents"
 authors = [{name = "Microsoft Corporation"}]
+license = "MIT"
+license-files = ["LICENSE"]
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
