--- a/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
+++ b/libraries/microsoft-agents-copilotstudio-client/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "microsoft-agents-copilotstudio-client"
 dynamic = ["version", "dependencies"]
 description = "A client library for Microsoft Agents"
+readme = {file = "readme.md", content-type = "text/markdown"}
 authors = [{name = "Microsoft Corporation"}]
 license = "MIT"
 license-files = ["LICENSE"]
