--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -12,6 +12,12 @@ strategy:
       PYTHON_VERSION: '3.10'
     Python_3.11:
       PYTHON_VERSION: '3.11'
+    Python_3.12:
+      PYTHON_VERSION: '3.12'
+    Python_3.13:
+      PYTHON_VERSION: '3.13'
+    Python_3.14:
+      PYTHON_VERSION: '3.14'
 
 variables:
   - name: PackageVersion
