--- a/versioning/pyproject.toml
+++ b/versioning/pyproject.toml
@@ -15,3 +15,12 @@ dynamic = ["version"]
 description = "Helper project to calculate version"
 authors = [{name = "Microsoft Corporation"}]
 requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Operating System :: OS Independent",
+]
