Update CODEOWNERS file to include team link for review requests

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,3 +4,5 @@
 
 # Global ownership - fallback for any files not covered by more specific rules
 * @microsoft/m365-agents-sdk-python-code-owners
+#   Team is found here:
+#   https://github.com/orgs/microsoft/teams/m365-agents-sdk-python-code-owners
