--- a/test_samples/app_style/env.TEMPLATE
+++ b/test_samples/app_style/env.TEMPLATE
@@ -17,3 +17,13 @@ COPILOTSTUDIOAGENT__ENVIRONMENTID=environment-id
 COPILOTSTUDIOAGENT__SCHEMANAME=schema-name
 COPILOTSTUDIOAGENT__TENANTID=tenant-id
 COPILOTSTUDIOAGENT__AGENTAPPID=agent-app-id
+
+# Proactive messaging sample settings
+PROACTIVEMESSAGING__BOTID=28:teams-app-id
+PROACTIVEMESSAGING__AGENTID=teams-app-id
+PROACTIVEMESSAGING__TENANTID=tenant-id
+PROACTIVEMESSAGING__SCOPE=https://api.botframework.com/.default
+PROACTIVEMESSAGING__CHANNELID=msteams
+PROACTIVEMESSAGING__SERVICEURL=https://smba.trafficmanager.net/teams/
+# Optional default user (if not supplied per request)
+PROACTIVEMESSAGING__USERAADOBJECTID=
