inverted assertions for quantifiers

--- a/dev/integration/data_driven_tests/basic_test.yaml
+++ b/dev/integration/data_driven_tests/basic_test.yaml
@@ -14,9 +14,10 @@ test:
     duration: 1
 
   - type: assertion
+    quantifier: ONE
     selector:
       index: -1
-      quantifier: ONE # implied
+      quantifier: ONE
       activity:
         type: message
     activity:
