Added working integration tests

--- a/dev/integration/pytest.ini
+++ b/dev/integration/pytest.ini
@@ -1,6 +1,11 @@
 [pytest]
 # Pytest configuration for Microsoft Agents for Python
 
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::aiohttp.web.NotAppKeyWarning
+
 # Test discovery configuration
 testpaths = tests
 python_files = test_*.py *_test.py
