--- a/dev/integration/tests/data_driven/basic_sample/directline/remove_heart_message_reaction.yaml
+++ b/dev/integration/tests/data_driven/basic_sample/directline/remove_heart_message_reaction.yaml
@@ -6,11 +6,12 @@ test:
       reactionsRemoved:
         - type: heart
       timestamp: 2025-07-10T02:30:00.0000000Z
-      id: 1752114287789
-      replyToId: 1752114287789
+      id: "1752114287789"
+      replyToId: "1752114287789"
   - type: assertion
     selector:
-      index: -1
+      activity:
+        type: message
     activity:
       type: message
       text: ["CONTAINS", "Message Reaction Removed: heart"]
